# PTSD-Survivors

./: .clang-format  .gitignore  Animated_8hpp_source.html  App_8hpp_source.html  Behavior_8hpp_source.html  CLAUDE.md  CMakeLists.txt  Camera_8hpp_source.html  Character_8hpp_source.html  Config_8hpp_source.html  Context_8hpp_source.html  DebugMessageCallback_8hpp_source.html  Enemy_8hpp_source.html  GameObject_8hpp_source.html  Game_2Util_2Animation_8hpp_source.html  Image_8hpp_source.html  Input_8hpp_source.html  LevelUpSystem_8hpp_source.html  Logger_8hpp_source.html  Manager_8hpp_source.html  Map_8hpp_source.html  Mirrored_8hpp_source.html  ObjectPool_8hpp_source.html  Offsetted_8hpp_source.html  Passive_8hpp_source.html  Physical_8hpp_source.html  Pickup_8hpp_source.html  Projectile_2Vampirica_8hpp_source.html  Projectile_2Whip_8hpp_source.html  Projectile_8hpp_source.html  QuadTree_8hpp_source.html  README.md  Renderer_8hpp_source.html  Resource_8hpp_source.html  Root_8hpp_source.html  SpriteBatch_8hpp_source.html  TODOS.md  TextureAtlas_8hpp_source.html  Timer_8hpp_source.html  TransformUtils_8hpp_source.html  (+421 more)
.github/workflows/: check.yml
assets/shaders/: Base.frag  Base.vert  Batch.frag  Batch.vert  Triangle.frag  Triangle.vert
assets/sprites/: script.sh
cmake/: Dependencies.cmake
docs/architecture/: design-patterns.md  layer-diagram.md
docs/research/: emulation-post-mortem.md  webgpu-vs-webgl.md
docs/roadmap/: emscripten-integration.md  phase1-ptsd-upgrade.md  phase2-emscripten.md  phase3-rendering.md  phase4-game-systems.md  phase5-ui-polish.md  phase6-content-balance.md  phases.md  ptsd-upgrade.md
example/include/: App.hpp
example/src/: App.cpp  main.cpp
include/: App.hpp  config.hpp  pch.hpp
include/Core/: Context.hpp  DebugMessageCallback.hpp  SpriteBatch.hpp  TextureAtlas.hpp
include/Game/: Camera.hpp  Character.hpp  Config.hpp  LevelUpSystem.hpp  Manager.hpp  Map.hpp  ObjectPool.hpp  ObjectPool.inl  Physical.hpp  Pickup.hpp  QuadTree.hpp  Resource.hpp  Util.hpp  WaveManager.hpp
include/Game/Enemy/: Enemy.hpp
include/Game/Passive/: Passive.hpp
include/Game/Projectile/: Behavior.hpp  Projectile.hpp  Vampirica.hpp  Whip.hpp
include/Game/Util/: Animated.hpp  Animation.hpp  Mirrored.hpp  ObjectPool.hpp  ObjectPool.inl  Offsetted.hpp  Physical.hpp  QuadTree.hpp  Timer.hpp  Util.hpp
include/Game/Weapon/: Vampirica.hpp  Weapon.hpp  Whip.hpp
include/Util/: Animation.hpp  GameObject.hpp  Image.hpp  Input.hpp  Logger.hpp  ObjectPool.hpp  ObjectPool.inl  Position.inl  Renderer.hpp  TransformUtils.hpp
resources/Data/waves/: stage1.json  stage2.json  stage3.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  (+29 more)
src/: App.cpp  main.cpp
src/Core/: Context.cpp  DebugMessageCallback.cpp  Shader.cpp  SpriteBatch.cpp  Texture.cpp  TextureAtlas.cpp  TextureUtils.cpp  VertexArray.cpp
src/Game/: Camera.cpp  Character.cpp  LevelUpSystem.cpp  Manager.cpp  Map.cpp  Physical.cpp  Pickup.cpp  QuadTree.cpp  Resource.cpp  Util.cpp  WaveManager.cpp
src/Game/Enemy/: Enemy.cpp
src/Game/Passive/: Passive.cpp
src/Game/Projectile/: Behavior.cpp  Projectile.cpp  Vampirica.cpp  Whip.cpp
src/Game/Util/: Animated.cpp  Animation.cpp  Mirrored.cpp  Offseted.cpp  Physical.cpp  QuadTree.cpp  Timer.cpp  Util.cpp
src/Game/Weapon/: Vampirica.cpp  Weapon.cpp  Whip.cpp
src/Util/: Animation.cpp  Image.cpp  Input.cpp  MissingTexture.cpp  Renderer.cpp  Text.cpp  TransformUtils.cpp
